--- a/2_estrutura_de_pastas/styles/Home.module.css
+++ b/2_estrutura_de_pastas/styles/Home.module.css
@@ -1,10 +1,3 @@
-.container {
-  padding: 0 2rem;
-}
-
-@media (max-width: 600px) {
-  .grid {
-    width: 100%;
-    flex-direction: column;
-  }
+.title {
+  color: red;
 }
