--- a/3_projeto/styles/Home.module.css
+++ b/3_projeto/styles/Home.module.css
@@ -3,6 +3,7 @@
     justify-content: center;
     align-items: center;
     margin-bottom: 2em;
+    margin-top: 2.3em;
 }
 
 .titulo_container h1 {
