--- a/3_projeto/components/Footer/Footer.module.css
+++ b/3_projeto/components/Footer/Footer.module.css
@@ -1,10 +1,12 @@
 .footer {
+    position: relative;
+    z-index: 1;
     display: flex;
     align-items: center;
     justify-content: center;
     background-color: #333;
-    height: 150px;
-    margin-top: 2.3em;
+    height: 100px;
+    /* margin-top: 2.3em; */
     margin-top: 3px solid #111;
     color: white;
 }
