--- a/3_projeto/components/NavBar/NavBar.module.css
+++ b/3_projeto/components/NavBar/NavBar.module.css
@@ -1,9 +1,11 @@
 .navbar {
+    position: relative;
+    z-index: 1;
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 1em 1.2em;
-    margin-bottom: 2em;
+    /* margin-bottom: 2em; */
     background-color: #333;
     color: #FFF;
 }
@@ -12,6 +14,18 @@
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.logo a {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    text-decoration: none;
+}
+
+.logo a:hover {
+    color: bisque;
 }
 
 .logo h1 {
@@ -38,3 +52,35 @@
 .menu a:hover {
     border-color: #FFF;
 }
+
+.searchBar {
+    display: flex;
+    align-items: center;
+    margin-left: 1em;
+    background-color: #fff;
+    border-radius: 5px;
+    overflow: hidden;
+  }
+  
+  .searchBar input {
+    width: 200px;
+    padding: 0.5em;
+    border: none;
+    background-color: transparent;
+    outline: none;
+  }
+  
+  .searchBar button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0.5em;
+    border: none;
+    background-color: transparent;
+    cursor: pointer;
+  }
+  
+  .searchBar button:hover {
+    background-color: #f2f2f2;
+  }
+  
