--- a/3_projeto/styles/Sobre.module.css
+++ b/3_projeto/styles/Sobre.module.css
@@ -1,14 +1,40 @@
 .sobre {
-    text-align: center;
+  text-align: center;
+  margin-top: 2.3em;
+  padding: 0;
 }
 
 .sobre h1 {
-    font-size: 2em;
-    margin-bottom: 1em;
+  font-size: 2em;
+  margin-bottom: 1em;
 }
 
 .sobre p {
-    max-width: 500px;
-    margin: 0 auto 1.5em;
-    line-height: 1.4;
+  max-width: 500px;
+  margin: 0 auto 1.5em;
+  line-height: 1.4;
 }
+
+.imageContainer {
+  margin-top: 2em;
+}
+
+.additionalInfo {
+  margin-top: 3em;
+}
+
+.additionalInfo h2 {
+  font-size: 1.5em;
+  margin-bottom: 0.5em;
+}
+
+.additionalInfo ul {
+  list-style: none;
+  padding: 0;
+  text-align: left;
+}
+
+.additionalInfo li {
+  margin-bottom: 0.5em;
+}
+
