--- a/3_projeto/styles/globals.css
+++ b/3_projeto/styles/globals.css
@@ -6,6 +6,26 @@
 }
 
 .main-container {
-    min-height: 70vh;
-
+    min-height: 82.7vh;
+    position: relative;
+    z-index: 0;
 }
+
+/* Estilizando a barra de rolagem */
+::-webkit-scrollbar {
+    width: 10px;
+  }
+  
+  ::-webkit-scrollbar-track {
+    background-color: #333;
+  }
+  
+  ::-webkit-scrollbar-thumb {
+    background-color: #fcd34d;
+    border-radius: 5px;
+  }
+  
+  ::-webkit-scrollbar-thumb:hover {
+    background-color: #f9c722f6;
+  }
+  
