--- a/3_projeto/components/Card/Card.module.css
+++ b/3_projeto/components/Card/Card.module.css
@@ -12,6 +12,8 @@
     background-color: #333;
     color: #FFF;
     animation: shiningEffect 6s linear infinite forwards;
+    transition: transform 0.3s;
+    transform: scale(1);
 }
 
 @keyframes shiningEffect {
@@ -20,6 +22,10 @@
     65% { border: 3px solid#7CBB00; } /* Cor final */
     75% { border: 3px solid#5de964; } /* Cor final */
     100% { border: 3px solid #ffffff; } /* Cor final */
+}
+
+.card:hover {
+    transform: scale(1.1); /* Aumenta o tamanho do card em 10% */
 }
 
 .card p {
